# quran-detector-api

./: .env.example  .gitignore  Dockerfile  Gemfile  README.en.md  README.md  mise.toml  pyproject.toml
.github/workflows/: kamal-run.yml
.kamal/: secrets
app/: health.py  main.py
app/v1/models/: ayah_match.py  correction.py  operations_request.py  operations_response.py  verse_match.py
app/v1/routers/: operations.py
config/: deploy.yml
src/quran_detector_api/: main.py  middleware.py  schemas.py  settings.py
src/quran_detector_api.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
src/quran_detector_api/routers/: v1.py
tests/: test_health.py
tests/v1/models/: conftest.py  test_ayah_match.py  test_correction.py  test_operations_request.py  test_operations_response.py
