[tool.poetry]
name = "quran-detector-api"
version = "0.1.0"
description = "FastAPI service for detecting & annotating Quranic verses"
authors = ["Muntaser Abukhadijah <abukhadijah.muntaser@gmail.com>"]
license = "MIT"
readme = "README.md"
packages = [
  { include = "app" }
]

[tool.poetry.dependencies]
python = ">=3.12,<4.0"
fastapi = {version = ">=0.115.8", extras = ["standard"]}
quran-detector = ">=0.1.3"

[tool.poetry.dev-dependencies]
mypy = ">=1.15.0"
pre-commit = ">=4.1.0"
pytest = ">=8.3.4"
pytest-cov = ">=6.0.0"
ruff = ">=0.9.9"

[tool.mypy]
strict = true
pretty = true

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "--cov=app --cov-branch --cov-report=term --cov-report=html --cov-fail-under=0"
