[project]
name = "quran-detector-api"
version = "0.1.0"
description = "FastAPI service for detecting & annotating Quranic verses"
authors = [{ name = "Muntaser Abukhadijah", email = "abukhadijah.muntaser@gmail.com" }]
license = "MIT"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
  "fastapi[standard]>=0.115.8",
]


[dependency-groups]
dev = [
  "mypy>=1.15.0",
  "pre-commit>=4.1.0",
  "pytest>=8.3.4",
  "pytest-cov>=6.0.0",
  "ruff>=0.9.9",
]

[tool.mypy]
strict = true
pretty = true

[tool.pytest.ini_options]
addopts = "--cov=app --cov-branch --cov-report=term --cov-report=html --cov-fail-under=100"

[tool.poetry]
package-mode = false